2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Adjust test to account for nanosleep()
	behavior more closely matching GNU/Linux.

2006-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxrwlock01/main.c, psxrwlock01/test.c: Improve rwlock test to
	include normal blocking and unblocking on timeout.

2006-12-02	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-17	Joel Sherrill <joel@OARcorp.com>

	* psxsem01/init.c: Account for change in POSIX semaphore time handling.
	Previously the timeout was not absolute time and checked BEFORE
	attempting to lock semaphore.

2006-11-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxbarrier01/main.c: New file.

2006-11-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxrwlock01/.cvsignore, psxrwlock01/Makefile.am, psxrwlock01/main.c,
	psxrwlock01/psxrwlock01.scn, psxrwlock01/test.c,
	psxspin01/.cvsignore, psxspin01/Makefile.am, psxspin01/main.c,
	psxspin01/psxspin01.scn, psxspin01/test.c: New files.

2006-11-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Adding POSIX barriers, POSIX spinlocks,
	and partial implementation of POSIX rwlocks.
	* psxbarrier01/.cvsignore, psxbarrier01/Makefile.am,
	psxbarrier01/psxbarrier01.scn, psxbarrier01/test.c: New files.

2006-10-30	Joel Sherrill <joel@OARcorp.com>

	PR 841/rtems
	* psxsem01/init.c: Make sem_timedwait more conformant to Open Group
	specification.

2006-10-17	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-07-11	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* psx01/Makefile.am, psx02/Makefile.am, psx03/Makefile.am,
	psx04/Makefile.am, psx05/Makefile.am, psx06/Makefile.am,
	psx07/Makefile.am, psx08/Makefile.am, psx09/Makefile.am,
	psx10/Makefile.am, psx11/Makefile.am, psx12/Makefile.am,
	psx13/Makefile.am, psxcancel/Makefile.am, psxchroot01/Makefile.am,